{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "3830f5bc-1911-4325-aca5-532b9f062216",
            "actions": [
                {
                    "name": "EquipWeapon01",
                    "type": "Button",
                    "id": "9a141f77-462b-4767-9249-8e132bba3796",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EquipWeapon02",
                    "type": "Button",
                    "id": "fca580e8-56ec-4844-9b0c-24609d6e089e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EquipWeapon03",
                    "type": "Button",
                    "id": "94a210fb-1d60-49f4-9907-f63fe0958872",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c1cab25a-94d9-40b1-a596-c8bdf47e231e",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "EquipWeapon01",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf8b6b49-dcdb-4bb9-8cdd-d0b590251312",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "EquipWeapon03",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6cba518-531e-4e37-8cb6-5d652390dc12",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "EquipWeapon02",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}